--- a/Software/BSY_PeripheralHAL_UART/ProjectBSY/ProjectSTM32.uvprojx
+++ b/Software/BSY_PeripheralHAL_UART/ProjectBSY/ProjectSTM32.uvprojx
@@ -10,11 +10,12 @@
       <TargetName>STM32F446R</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
+      <pCCUsed>5060020::V5.06 (build 20)::ARMCC</pCCUsed>
       <TargetOption>
         <TargetCommonOption>
           <Device>STM32F446RETx</Device>
           <Vendor>STMicroelectronics</Vendor>
-          <PackID>Keil.STM32F4xx_DFP.2.5.0</PackID>
+          <PackID>Keil.STM32F4xx_DFP.2.6.0</PackID>
           <PackURL>http://www.keil.com/pack</PackURL>
           <Cpu>IROM(0x08000000,0x80000) IRAM(0x20000000,0x20000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
@@ -229,6 +230,7 @@
             <useUlib>1</useUlib>
             <EndSel>0</EndSel>
             <uLtcg>0</uLtcg>
+            <nSecure>0</nSecure>
             <RoSelD>3</RoSelD>
             <RwSelD>3</RwSelD>
             <CodeSel>0</CodeSel>
@@ -365,6 +367,8 @@
             <useXO>0</useXO>
             <v6Lang>0</v6Lang>
             <v6LangP>0</v6LangP>
+            <vShortEn>0</vShortEn>
+            <vShortWch>0</vShortWch>
             <VariousControls>
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F446xx,</Define>
@@ -438,6 +442,16 @@
               <FilePath>..\Libraries\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_cortex.c</FilePath>
             </File>
             <File>
+              <FileName>stm32f4xx_hal_pwr.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Libraries\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_pwr.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32f4xx_hal_pwr_ex.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Libraries\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_pwr_ex.c</FilePath>
+            </File>
+            <File>
               <FileName>stm32f4xx_hal_dma.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\Libraries\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_dma.c</FilePath>
@@ -470,12 +484,12 @@
             <File>
               <FileName>stm32f4_delay.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\Program\Dirvers\stm32f4_delay.c</FilePath>
+              <FilePath>..\Program\drivers\stm32f4_delay.c</FilePath>
             </File>
             <File>
               <FileName>stm32f4_usart.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\Program\Dirvers\stm32f4_usart.c</FilePath>
+              <FilePath>..\Program\drivers\stm32f4_usart.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -492,15 +506,20 @@
               <FileType>1</FileType>
               <FilePath>..\Program\experiment_stm32f4_it.c</FilePath>
             </File>
+            <File>
+              <FileName>experiment_stm32f4_msp.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Program\experiment_stm32f4_msp.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
           <GroupName>Module</GroupName>
           <Files>
             <File>
-              <FileName>module_rs232.c</FileName>
+              <FileName>module_serial.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\Program\Modules\module_rs232.c</FilePath>
+              <FilePath>..\Program\modules\module_serial.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -510,43 +529,12 @@
             <File>
               <FileName>algorithm_string.c</FileName>
               <FileType>1</FileType>
-              <FilePath>..\Program\Algorithms\algorithm_string.c</FilePath>
+              <FilePath>..\Program\algorithms\algorithm_string.c</FilePath>
             </File>
           </Files>
         </Group>
       </Groups>
     </Target>
   </Targets>
-
-  <RTE>
-    <apis/>
-    <components/>
-    <files>
-      <file attr="config" category="header" name="RTE_Driver\Config\RTE_Device.h">
-        <instance index="0" removed="1">RTE\Device\STM32F103CB\RTE_Device.h</instance>
-        <component Cclass="Device" Cgroup="Startup" Cvendor="Keil" Cversion="1.0.0" condition="STM32F1xx CMSIS Device"/>
-        <package name="STM32F1xx_DFP" schemaVersion="1.2" url="http://www.keil.com/pack/" vendor="Keil" version="1.0.5"/>
-        <targetInfos/>
-      </file>
-      <file attr="config" category="source" condition="STM32F1xx MD" name="Device\Source\ARM\startup_stm32f10x_md.s">
-        <instance index="0" removed="1">RTE\Device\STM32F103CB\startup_stm32f10x_md.s</instance>
-        <component Cclass="Device" Cgroup="Startup" Cvendor="Keil" Cversion="1.0.0" condition="STM32F1xx CMSIS Device"/>
-        <package name="STM32F1xx_DFP" schemaVersion="1.2" url="http://www.keil.com/pack/" vendor="Keil" version="1.0.5"/>
-        <targetInfos/>
-      </file>
-      <file attr="config" category="source" name="Device\StdPeriph_Driver\templates\stm32f10x_conf.h" version="3.5.0">
-        <instance index="0" removed="1">RTE\Device\STM32F103CB\stm32f10x_conf.h</instance>
-        <component Cclass="Device" Cgroup="StdPeriph Drivers" Csub="Framework" Cvendor="Keil" Cversion="3.5.1" condition="STM32F1 STDPERIPH"/>
-        <package name="STM32F1xx_DFP" schemaVersion="1.2" url="http://www.keil.com/pack/" vendor="Keil" version="1.0.5"/>
-        <targetInfos/>
-      </file>
-      <file attr="config" category="source" name="Device\Source\system_stm32f10x.c">
-        <instance index="0" removed="1">RTE\Device\STM32F103CB\system_stm32f10x.c</instance>
-        <component Cclass="Device" Cgroup="Startup" Cvendor="Keil" Cversion="1.0.0" condition="STM32F1xx CMSIS Device"/>
-        <package name="STM32F1xx_DFP" schemaVersion="1.2" url="http://www.keil.com/pack/" vendor="Keil" version="1.0.5"/>
-        <targetInfos/>
-      </file>
-    </files>
-  </RTE>
 
 </Project>
